# mdcc_geometria_computacional

./: .gitignore  BUILD_SCRIPT_README.md  CMakeLists.txt  README.md  build.py  imgui.ini  vcpkg.json
common/: CMakeLists.txt
common/error/: CMakeLists.txt  error.hpp  result.hpp
common/geometry/: CMakeLists.txt  arithmetic_vector.hpp  geometry.hpp  vector.hpp
common/math/: CMakeLists.txt  vec.hpp  vecn.hpp  vector.hpp
common/renderer/: CMakeLists.txt  input.h  renderer.cpp  renderer.hpp
common/result/: CMakeLists.txt  result.hpp
common/sort/: CMakeLists.txt  mergesort.hpp  mergesort.inl  quicksort.hpp  quicksort.inl  selectsort.hpp  selectsort.inl
tarefa_02/: CMakeLists.txt  main.cpp  utils.hpp
trabalho_01/: CMakeLists.txt  main.cpp  utils.hpp
trabalho_02/: CMakeLists.txt  QUESTIONARIO.md  main.cpp  utils.hpp
trabalho_03/: CMakeLists.txt
